[tool.poetry]
name = "qa-test-library"
version = "0.1.24"
description = "QA test fixture: simple Python library for agent-coder integration tests"
authors = []
readme = "README.md"
packages = [{include = "qa_test_library", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
